# job-scraper

./: .gitignore  pyproject.toml
.github/workflows/: daily-scrape.yml
job_scraper/: __main__.py  filters.py  models.py  notifier.py  store.py
job_scraper/scrapers/: __init__.py  base.py  himalayas.py  jobspy_scraper.py  one04.py  remoteok.py  remotive.py  weworkremotely.py
tests/: conftest.py  test_filters.py  test_scrapers.py  test_store.py
