[project]
name = "job-scraper"
version = "0.1.0"
description = "Remote job scraper for Data/Backend roles in Asia timezone"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "tg-notify",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["job_scraper*"]
